[package]
name = "dotenv-rs"
authors = ["leiju <leijux@outlook.com>"]
description = ""
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
