[package]
name = "rsdotenv"
description = "rust dotenv"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
categories.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
